@@ -1,14 +1,20 @@
 Package: smacof
 Type: Package
 Title: Multidimensional Scaling
-Version: 2.1-0
-Date: 2020-03-02
+Version: 2.1-1
+Date: 2020-05-28
 Authors@R: c(person("Patrick", "Mair", role = c("aut", "cre"), email = "mair@fas.harvard.edu"), person("Jan", "De Leeuw", role = "aut"), person("Patrick J. F.", "Groenen", role = "aut"), person("Ingwer", "Borg", role = "ctb"))
 Description: Implements the following approaches for multidimensional scaling (MDS) based on stress minimization using majorization (smacof): ratio/interval/ordinal/spline MDS on symmetric dissimilarity matrices, MDS with external constraints on the configuration, individual differences scaling (idioscal, indscal), MDS with spherical restrictions, and ratio/interval/ordinal/spline unfolding (circular restrictions, row-conditional). Various tools and extensions like jackknife MDS, bootstrap MDS, permutation tests, MDS biplots, gravity models, unidimensional scaling, drift vectors (asymmetric MDS), classical scaling, and Procrustes are implemented as well.  
 Imports: graphics, stats, polynom, Hmisc, nnls, grDevices, MASS, weights, ellipse, wordcloud, candisc, parallel, foreach, doParallel
 Depends: R (>= 3.5.0), plotrix, colorspace, e1071
 License: GPL-3
-Suggests: knitr, prefmod, MPsychoR, calibrate
+Suggests: 
+    knitr,
+    prefmod,
+    MPsychoR,
+    calibrate,
+    ggplot2,
+    rmarkdown
 VignetteBuilder: knitr
 LazyData: yes
 LazyLoad: yes
