@@ -895,44 +895,3 @@ Preference/Dominance Data},
   Year = {1949}
 }
 
-
-
-@article{,
-  title={},
-  author={},
-  journal={},
-  volume={},
-  pages={},
-  year={}
-}
-
-
-
-
-@TECHREPORT{,
-  author={}, 
-  title={}, 
-  institution={},
-  year={} 
-}
-
-@book{,
-  Address = {},
-  Author = {},
-  Publisher = {},
-  Title = {},
-  Year = {}
-}
-
-
-@incollection{,
-  Author = {},
-	Booktitle = {},
-	Editor = {},
-	Pages = {},
-  Address = {},
-	Publisher = {},
-	Title = {},
-	Year = {}
-}
-
